fixed section collision on scroll up. Fixed misaligned nav element. Removed link decoration

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ a {
   font-size: 1em;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
   height: 2.5em;
   width: 8em;
@@ -303,7 +307,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .project-display {
@@ -538,6 +542,7 @@ html {
   background: #fec5bb;
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
+  width: 9em;
 }
 
 /* ENGLISH DECK */
@@ -625,11 +630,11 @@ html {
     justify-content: center;
   }
 
-  .nav-item-box a {
+  /* .nav-item-box a {
     align-self: flex-end;
     justify-self: flex-end;
     text-align: center;
-  }
+  } */
 
   .about-section p {
     width: 80%;
